# gpibusb-firmware-arm

./: .gitconfig  .gitignore  .gitmessage  .gitmodules  CMakeLists.txt  README.md  libopencm3.rules.mk  libopencm3.target.mk  uncrustify.cfg
cmsis/: README
etools/: README.md  ecbuff_cfg.h
firmware/: .gdbinit  CMakeLists.txt  Makefile  cmd_handlers.h  cmd_hashtable.c  cmd_hashtable.gen  cmd_hashtable.h  cmd_parser.c  cmd_parser.h  firmware.c  firmware.elf  firmware.h  gpib.c  gpib.h  host_comms.c  host_comms.h  hw_backend.c  hw_backend.h  hw_conf.h  libc_stubs.c  libc_stubs.h  openocd.cfg  printf_config.h  ring.c  ring.h  usb_cdc.c  usb_cdc.h  utils.h
firmware/tests/: Makefile  cmdstring.c  dummy_handlers.h  hash.c
hw/: README
ldscripts/: stm32f070.ld
